--- a/shared/package.json
+++ b/shared/package.json
@@ -1,12 +1,13 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "peerDependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
+    "passport-jwt": "^4.0.0"
+  }
 }
